Fixed an EXTREMELY annoying issue with invisible mutalisks spawning and obliterating me with high damage glaves. Attempting to fix a glitch where the on-death cutscene plays multiple times after death. Collision for mutalisks has not been installed yet.

--- a/style.css
+++ b/style.css
@@ -10,14 +10,16 @@
 
 
 
-
+#healthDisplay {
+    color: white;
+}
 
 .mutalisk {
     position: absolute;
 }
 
 .glave {
-
+    position: absolute;
 }
 #battleCruiserHitBox {
     color: white;
